# UaoForQuasar

./: README.md  example1.py  generateClass.py  main.py  source_me.rc  uao.html  uao.py
Uaotilities/: Delphi.py
demo/: CMakeLists.txt  demo.cpp
include/: ArrayTools.h  ClientSessionFactory.h
src/: ClientSessionFactory.cpp
supplementary_include/: ArrayTools.h  CalculatedVariable.h  ClientSessionFactory.h  UaoExceptions.h
supplementary_src/: ArrayTools.cpp  CalculatedVariable.cpp  ClientSessionFactory.cpp  UaoExceptions.cpp
templates/: designToClassBody.jinja  designToClassHeader.jinja
xslt/: designToClassBody.xslt  designToClassHeader.xslt
